[gd_scene load_steps=4 format=3 uid="uid://xr0rqesr0eri"]

[ext_resource type="Script" uid="uid://cgjve11unc3l4" path="res://projects/vam-pirate_ship-vivors_2/player_creation/part_selector.gd" id="1_tior0"]
[ext_resource type="Texture2D" uid="uid://cq8muruehj4nv" path="res://resources/ui_icons/pirate/pirate-captain.png" id="2_vhv4r"]
[ext_resource type="Texture2D" uid="uid://cbv0t83mpq15f" path="res://resources/ui_icons/pirate/crossed-bones.png" id="3_h1k17"]

[node name="PartSelector" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 128)
size_flags_horizontal = 3
script = ExtResource("1_tior0")

[node name="OptionA" type="TextureButton" parent="."]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_vhv4r")
texture_disabled = ExtResource("3_h1k17")
ignore_texture_size = true
stretch_mode = 0

[node name="OptionB" type="TextureButton" parent="."]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_vhv4r")
texture_disabled = ExtResource("3_h1k17")
ignore_texture_size = true
stretch_mode = 0

[node name="OptionC" type="TextureButton" parent="."]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_vhv4r")
texture_disabled = ExtResource("3_h1k17")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="OptionA" to="." method="_on_option_a_pressed"]
[connection signal="pressed" from="OptionB" to="." method="_on_option_b_pressed"]
[connection signal="pressed" from="OptionC" to="." method="_on_option_c_pressed"]
